--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.9",
     "axios": "^0.18.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
