Major styling changes

--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar --include-path ./src/styles --include-path ./node_modules src/styles/ -o src/styles/",
+    "build-css": "node-sass-chokidar --include-path ./src/styles --include-path ./node_modules src/styles/ -o src/styles/ sass ./components/pages/dashboard/style/chips.scss ./components/pages/dashboard/style/chips.css",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src/styles --include-path ./node_modules src/styles/ -o src/styles --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
