--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,19 @@
     "debug": "DEBUG=server:* nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.363.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "nocache": "^2.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
