--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
-    "react-transition-group": "^1.2.1"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src/styles --include-path ./node_modules src/styles/ -o src/styles/ sass ./components/pages/dashboard/style/chips.scss ./components/pages/dashboard/style/chips.css",
