--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "antd": "^3.10.9",
     "axios": "^0.18.0",
+    "canvasjs": "^1.8.1",
+    "chartist": "^0.11.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.5.1",
+    "react-chartist": "^0.13.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
