--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "canvasjs": "^1.8.1",
     "chartist": "^0.11.0",
+    "compass": "^0.1.1",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
@@ -14,7 +15,8 @@
     "react-chartist": "^0.13.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src/styles --include-path ./node_modules src/styles/ -o src/styles/ sass ./components/pages/dashboard/style/chips.scss ./components/pages/dashboard/style/chips.css",
