--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-scroll": "^1.7.10",
     "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
