--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-scroll": "^1.7.10",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src/styles --include-path ./node_modules src/styles/ -o src/styles/ sass ./components/pages/dashboard/style/chips.scss ./components/pages/dashboard/style/chips.css",
